Include pics to README

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </nav>
     </header>
 
+    <main>
+        <h1> Hi, I am Alex Qiang! 
+        <br>Junior developer
+        </h1>
+
+    </main>
+    
+
 
     
 
