--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -40,15 +40,6 @@
 
 
 </body>
-
-
-
-
-
-
-
-
-
 
 
 
