--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Qiang</title>
     
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://alexqiang.netlify.app/style.css" rel="stylesheet" integrity="sha512-UCzhCeXf8tRtTqFXbNTHXBRVeEdFaP0zdWJj4MhFUjGjp4zxarcytGSqejD+vej9194gvhIS0LVBEiMNC3ZbOA==" crossorigin="anonymous">
     
 </head>
 
