Link resume button to pdf

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <h1>Hi, I am Alex Qiang, <br>a junior developer</h1>
         <br>
         <br>
-
+        <a href="test.pdf" download="">
         <button class="btn"><i class="fa fa-download"></i> Resume</button>
+        </a>
         </section>
-
+    
 
     </main>
     
