--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     </main>
     <footer>
+        <p>Alex Qiang 2020&copy;</p>
         <a href="https://github.com/AlexQ6"><i class="fab fa-github fa-3x"></i></a>
 
         <a href="https://twitter.com/AlexQiang1"><i class="fab fa-twitter fa-3x"></i></a>
