--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Qiang</title>
     
-    <link href="./style.css" rel="stylesheet">
+    <link href="src/style.css" rel="stylesheet">
     <!-- Add icon library -->
     <script src="https://kit.fontawesome.com/ea3b4e5f13.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
