Fix nav menu link issue

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             
             <div class="myLinks">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="blog.html">My Blog</a>
-                <a href="contact.html">Contact</a>
+                <a href="src/about.html">About</a>
+                <a href="src/portfolio.html">Portfolio</a>
+                <a href="src/blog.html">My Blog</a>
+                <a href="src/contact.html">Contact</a>
             </div>
         </nav>
     </header>
