--- a/src/contact.html
+++ b/src/contact.html
@@ -24,7 +24,7 @@
             <input type="checkbox" id="toggle"/>
             
             <div class="myLinks">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="blog.html">My Blog</a>
