--- a/src/about.html
+++ b/src/about.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -42,9 +43,9 @@
             My resume is available for download as well.
         </p>
 
-        <a href="test.pdf" download="">
-            <button class="download"><i class="fa fa-download"></i> Resume</button>
-        </a>
+        <button class="download" type="submit" onclick="window.open('./test.pdf')">
+            <i class="fa fa-download"></i> Resume
+        </button>
         
         </section>
     
