Fix deployment issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,10 +40,11 @@
         <section>
         <h1>Hi, I am Alex Qiang, <br>a junior developer</h1>
         <br>
-        <br>
-        <a href="test.pdf" download="">
-        <button class="download"><i class="fa fa-download"></i> Resume</button>
-        </a>
+        <br>        
+
+        <button class="download" type="submit" onclick="window.open('src/test.pdf')">
+            <i class="fa fa-download"></i> Resume
+        </button>
         </section>
     
 
