--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,7 @@
     <link href="https://alexqiang.netlify.app/src/style.css" rel="stylesheet" integrity="sha512-GyeY08Ncw2HOq6gfhK3axqrJy4m7dhqB6F5LCX3FXPcjL1Jgvh2CGvYuqbXkfCkmiuw0WEjCqE4bZOTtydhTyw==" crossorigin="anonymous">
     
     <!-- Add icon library -->
-    <script src="https://kit.fontawesome.com/ea3b4e5f13.js" integrity="sha512-M1Gz2S0gXudxbPUUGonCTObYg3Dgfwv+7e/H3i3o8KowERzyy919huPCgvtUAyWhRqYl/aT5+sxqVIuu32Coow==" crossorigin="anonymous"><script>
+    <script src="https://kit.fontawesome.com/ea3b4e5f13.js" integrity="sha512-M1Gz2S0gXudxbPUUGonCTObYg3Dgfwv+7e/H3i3o8KowERzyy919huPCgvtUAyWhRqYl/aT5+sxqVIuu32Coow==" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous">
     
 </head>
